[build-system]
# -- Everything needed just to run setup.py ---------------
requires = [
    "setuptools>=62",      # the build backend
    "wheel",
    "ninja",         # speeds up C++/CUDA builds
    "numpy"          # setup.py imports numpy for version checks
]
build-backend = "setuptools.build_meta"
